--- a/strings/langs/en.yml
+++ b/strings/langs/en.yml
@@ -251,8 +251,9 @@ S_B_2 : "‹ الاعدادات ›"
 S_B_3 : "‹ تحديثات البوت ›"
 S_B_4 : "‹ قناة السوࢪس ›"
 S_B_5 : "‹ اضف البوت في مجموعتك ›"
-S_B_6 : "• المطور •"
-S_B_7 : "• اوامر البوت •"
+S_B_6 : "💡 Git Repo"
+S_B_7 : "• المطور •"
+S_B_8 : "• اوامر البوت •"
 
 #Help 
 H_B_1 : "• اوامر المشرفين •"
@@ -469,4 +470,3 @@ sug_24 : "يمكنك التحقق من مطور البوت ومستخدمي sudo
 sugar_25 : "يحتوي الروبوت على ميزة تسمى ** وضع حذف الأوامر **. يقوم بحذف الأوامر المنفذة تلقائيًا. \n \n تمكين أو تعطيل الوضع من /الإعدادات [__ ممكن افتراضيًا__]"
 sug_26 : "يمكنك تغيير لغة الروبوت إلى اللغات المتاحة لسهولة الفهم. \n \n الأمر : /اللغة"
 sug_27 : "لدى الروبوت ميزة تسمى ** فرض التشغيل **. \n \n ** فرض التشغيل ** يوقف مسار التشغيل في الدردشة الصوتية ويبدأ تشغيل المسار الذي تم البحث عنه على الفور دون إزعاج /مسح قائمة الانتظار. \n \n الأمر : /playforce "
-
