--- a/strings/langs/en.yml
+++ b/strings/langs/en.yml
@@ -251,7 +251,7 @@ S_B_2 : "‹ الاعدادات ›"
 S_B_3 : "‹ تحديثات البوت ›"
 S_B_4 : "‹ قناة السوࢪس ›"
 S_B_5 : "‹ اضف البوت في مجموعتك ›"
-S_B_6 : "💡 Git Repo"
+S_B_6 : "‹ قناة بوت ايفان ›"
 S_B_7 : "• المطور •"
 S_B_8 : "• اوامر البوت •"
 
